# agent-vigilo

./: AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
app/: Cargo.toml
app/infra/dev/: docker-compose.yml
app/src/: main.rs  wasm.rs
app/src/adapters/: database.rs
app/src/cli/: args.rs  mod.rs
app/src/cli/commands/: evaluators.rs  setup.rs
app/src/context/: mod.rs  output.rs  registry.rs  wasm.rs
app/src/db/: migrations.rs  mod.rs
app/web/: docusaurus.config.ts  package-lock.json  package.json
docs/: package-lock.json
evaluators/: AGENTS.md  README.md
evaluators/sentiment/: Cargo.toml  README.md  Vigilo.toml
evaluators/sentiment-basic-en/: Cargo.toml  README.md  example-input.json
evaluators/sentiment-basic-en/src/: lib.rs
evaluators/sentiment/src/: lib.rs
example/: README.md  profile.yaml
example-project/: README.md  dataset.yaml
infra/: README.md
infra/dev/: .env  Dockerfile.sqlx  docker-compose.yml
migrations/: 0002_add_enums.sql  0003_create_evaluator_http_policies.sql  0003_create_evaluators.sql  0003_create_runs.sql  0004_create_executions.sql  0004_create_runs.sql  0005_create_dataset_versions.sql  0005_create_execution_attempts.sql  0005_create_executions.sql  0005_create_runs.sql  0006_create_evaluator_results.sql  0006_create_execution_attempts.sql  0006_create_run_chunks.sql  0006_create_runs.sql  0007_create_case_blobs.sql  0007_create_evaluator_results.sql  0007_create_execution_aggregates.sql  0008_create_case_blobs.sql  0008_create_dataset_version_cases.sql  0008_create_execution_aggregates.sql  0008_create_outbox_events.sql  0009_create_dataset_version_cases.sql  0009_create_executions.sql  0009_create_outbox_events.sql
src/: main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: evaluators.rs  mod.rs  placeholder.rs  setup.rs
src/context/: database.rs  mod.rs  output.rs
vigilo/: Cargo.toml  README.md
vigilo/src/: lib.rs  main.rs  manifest.rs  mq.rs  runtime.rs
vigilo/src/cli/: mod.rs
vigilo/src/cli/commands/: coordinator.rs  evaluators.rs  mod.rs  run.rs  setup.rs  worker.rs
vigilo/src/context/: database.rs  messaging.rs  mod.rs  output.rs  registry.rs  wasm.rs
vigilo/src/contracts/: evaluator.rs  mod.rs  run.rs
vigilo/src/db/: chunk_processing.rs  evaluator_results.rs  evaluators.rs  execution_aggregates.rs  execution_attempts.rs  executions.rs  migrations.rs  mod.rs  outbox_events.rs  run_dispatch.rs  run_planning.rs  runs.rs
vigilo/src/db/tables/: evaluator_results.rs  evaluators.rs  execution_aggregates.rs  execution_attempts.rs  executions.rs  mod.rs  outbox_events.rs  runs.rs
vigilo/src/db/workflows/: chunk_processing.rs  mod.rs  run_create.rs  run_dispatch.rs
vigilo/src/models/: case_blob.rs  dataset_version_case.rs  evaluator.rs  evaluator_result.rs  execution.rs  execution_aggregate.rs  execution_attempt.rs  mod.rs  outbox_event.rs  run.rs  run_chunk.rs
vigilo/src/mq/: mod.rs
vigilo/src/outbox/: publisher.rs
web/: docusaurus.config.ts
web/docs/architecture/: _category_.json  failure-modes.mdx  flow.md  flow.mdx
web/docs/configuration/: _category_.json  dataset-format.mdx  run-profile.mdx  vigilo-toml.mdx
web/docs/guides/: _category_.json  creating-evaluators.mdx  getting-started.mdx  publishing.mdx
web/src/pages/: index.tsx
wit/: evaluator.wit
