[package]
name = "agent-vigilo"
version = "0.1.0"
authors = ["Gregory Langlais <_@gregorylanglais.com>"]
edition = "2024"
description = "Distributed evaluation and deployment gating for Generative AI systems."
license = "MIT"
readme = "README.md"
keywords = [
    "generative",
    "ai",
    "models",
    "evaluations",
    "gating"
]
repository = "https://github.com/gregl83/agent-vigilo"
homepage = "https://agentvigilo.com"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = { version = "1.0.102" }
async-trait = {  version = "0.1.89" }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.52.1", features = ["full"] }

[features]
default = []
