[package]
name = "vigilo"
version = "0.1.0"
authors = ["Gregory Langlais <_@gregorylanglais.com>"]
edition = "2024"
description = "Distributed evaluation and deployment gating for Generative AI systems."
license = "MIT"
readme = "README.md"
keywords = [
    "vigilo",
    "ai",
    "mlops",
    "evaluations",
    "gating",
]
repository = "https://github.com/gregl83/agent-vigilo"
homepage = "https://agentvigilo.com"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = { version = "1.0.102" }
async-trait = {  version = "0.1.89" }
blake3 = "1.8.5"
cargo_metadata = { version = "0.23.1" }
cargo_toml = { version = "0.22.3" }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
moka = { version = "0.12.15", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = { version = "1.1.2+spec-1.1.0"}
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wasmtime = { version = "44.0.0" }

[features]
default = []
